[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/SpaceShooterRedux/PNG/playerShip1_blue.png" type="Texture" id=1]
[ext_resource path="res://Nodes/scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/SpaceShooterRedux/PNG/playerShip2_blue.png" type="Texture" id=3]
[ext_resource path="res://Sprites/SpaceShooterRedux/PNG/playerShip1_red.png" type="Texture" id=4]
[ext_resource path="res://Sprites/SpaceShooterRedux/PNG/Effects/fire16.png" type="Texture" id=5]
[ext_resource path="res://Sprites/SpaceShooterRedux/PNG/Effects/fire14.png" type="Texture" id=6]
[ext_resource path="res://Sprites/SpaceShooterRedux/PNG/Effects/fire17.png" type="Texture" id=7]
[ext_resource path="res://Sprites/SpaceShooterRedux/PNG/Effects/fire15.png" type="Texture" id=8]
[ext_resource path="res://audio/146770__qubodup__rocket-boost-engine-loop.wav" type="AudioStream" id=9]
[ext_resource path="res://Sprites/explosion-6_up.png" type="Texture" id=10]
[ext_resource path="res://audio/ship_destroy.wav" type="AudioStream" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "explode",
"speed": 16.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "red1",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "blue2",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "blue1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 22.3016, 34.4645 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "speed",
"speed": 40.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "fire",
"speed": 20.0
}, {
"frames": [  ],
"loop": true,
"name": "none",
"speed": 5.0
} ]

[node name="Player" type="Area2D" groups=[
"Player",
]]
gravity = 250.0
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "blue1"
playing = true
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 50.1984, 41.4283 )
shape = SubResource( 10 )
one_way_collision = true

[node name="Guns" type="Node2D" parent="."]

[node name="Right_pos" type="Position2D" parent="Guns"]
position = Vector2( 96, 25 )

[node name="Left_pos" type="Position2D" parent="Guns"]
position = Vector2( 4, 25 )

[node name="Mid_pos" type="Position2D" parent="Guns"]
position = Vector2( 49.703, -5 )

[node name="Bullet_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="FireSprite" type="AnimatedSprite" parent="."]
position = Vector2( 49.3883, 89.2357 )
frames = SubResource( 11 )
animation = "speed"
frame = 1
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -7.0

[node name="deadaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="swipe" from="." to="." method="_on_Player_swipe"]
[connection signal="timeout" from="Bullet_timer" to="." method="_on_Bullet_timer_timeout"]
